--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts":{
+    "start": "node backend/app.js"
+  },
   "dependencies": {
+    "express": "^5.2.1",
     "npm": "^11.6.4"
   }
 }
