--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "scripts":{
-    "start": "node backend/app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "^5.2.1",
