--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST="mysql"
-DB_USER="root"
-DB_PASSWORD="root"
-DB_NAME="wallet_db"
+DB_HOST=wallet_sql
+DB_ROOT_PASSWORD=groot
+DB_USER=wallet_user
+DB_PASSWORD=root
+DB_NAME=wallet_db
