create routes api users

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   },
   "dependencies": {
     "express": "^5.2.1",
-    "npm": "^11.6.4"
+    "npm": "^11.6.4",
+    "mysql2": "^3.3.3",
+    "bcrypt": "^5.1.0"
   }
 }
