--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,16 @@
 {
+   "name": "express-backend",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "node src/app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.3.3",
-    "npm": "^11.6.4"
+    "npm": "^11.6.4",
+    "dotenv": "^16.1.4"
   }
 }
